Issue #19: Rememeber to use spacing variables

--- a/src/02-molecules/buttons.css
+++ b/src/02-molecules/buttons.css
@@ -36,7 +36,7 @@
 }
 
 .button__icon {
-    margin-right: 0.25rem;
+    margin-right: $spacing-xsm;
 }
 
 .button:not(:disabled) > .button__icon {
